--- a/.env
+++ b/.env
@@ -24,8 +24,7 @@ APP_SECRET=9ad8871a9883956d92516a00ea663b59
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
-DATABASE_URL="mysql://root:Ghfdbkj,jz1990ujl!@127.0.0.1:3306/db_dev?serverVersion=8.0.32&charset=utf8mb4"
-#DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
